Fix STC-35 initialization