@@ -41,8 +41,6 @@ import java.util.Locale;
 import java.util.Map;
 import java.util.Scanner;
 
-import javax.xml.bind.DatatypeConverter;
-
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import com.google.gson.JsonDeserializationContext;
@@ -70,7 +68,8 @@ public class ConvertionUtils {
 
     private static Gson gson = null;
 
-    private static final Charset UTF8_CHARSET = Charset.forName("UTF-8");
+    private static final Charset UTF8_CHARSET = StandardCharsets.UTF_8;
+    private static final char[] hexCode = "0123456789ABCDEF".toCharArray();
 
     public static synchronized Gson getGson() {
         if (gson == null) {
@@ -120,7 +119,12 @@ public class ConvertionUtils {
         if (bytes == null || bytes.length == 0) {
             return "";
         }
-        return DatatypeConverter.printHexBinary(bytes);
+        StringBuilder r = new StringBuilder(bytes.length * 2);
+        for (byte b : bytes) {
+            r.append(hexCode[(b >> 4) & 0xF]);
+            r.append(hexCode[(b & 0xF)]);
+        }
+        return r.toString();
     }
 
     /**
@@ -155,7 +159,7 @@ public class ConvertionUtils {
      * @return the base64-encoded string.
      */
     public static String toBase64String(byte[] bytes) {
-        return DatatypeConverter.printBase64Binary(bytes);
+        return Base64.encode(bytes);
     }
 
     /**
@@ -199,7 +203,26 @@ public class ConvertionUtils {
      * @return the byte array.
      */
     public static byte[] hexToBytes(String value) {
-        return DatatypeConverter.parseHexBinary(value);
+        final int len = value.length();
+
+        // "111" is not a valid hex encoding.
+        if (len % 2 != 0) {
+            throw new IllegalArgumentException("hexBinary needs to be even-length: " + value);
+        }
+
+        byte[] out = new byte[len / 2];
+
+        for (int i = 0; i < len; i += 2) {
+            int h = hexToBin(value.charAt(i));
+            int l = hexToBin(value.charAt(i + 1));
+            if (h == -1 || l == -1) {
+                throw new IllegalArgumentException("contains illegal character for hexBinary: " + value);
+            }
+
+            out[i / 2] = (byte) (h * 16 + l);
+        }
+
+        return out;
     }
 
     /**
@@ -372,4 +395,16 @@ public class ConvertionUtils {
         return result;
     }
 
+    private static int hexToBin(char ch) {
+        if ('0' <= ch && ch <= '9') {
+            return ch - '0';
+        }
+        if ('A' <= ch && ch <= 'F') {
+            return ch - 'A' + 10;
+        }
+        if ('a' <= ch && ch <= 'f') {
+            return ch - 'a' + 10;
+        }
+        return -1;
+    }
 }
